[package]
name = "gnosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
bytes = "1.1.0"
clap = { version = "3.2.6", features = ["derive"] }
crossterm = "0.25.0"
derive_more = { version = "0.99.17", features = ["from"] }
ed25519-dalek = "1.0.1"
env_logger = "0.9.0"
flume = "0.10.14"
futures = "0.3.23"
hmac = "0.12.1"
log = "0.4.17"
nom = "7.1.1"
nom-varint = "0.5.0"
pretty-hex = "0.3.0"
prost = "0.10.4"
rand_core = { version = "0.5.1", features = ["getrandom"] }
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.19.0", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.3", features = ["codec", "net"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tui = "0.19.0"
x25519-dalek = "1.2.0"

[build-dependencies]
prost-build = "0.10.4"

[dev-dependencies]
hex-literal = "0.3.4"
